[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/planet1.png" type="Texture" id=1]
[ext_resource path="res://player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/lvl1.gd" type="Script" id=3]
[ext_resource path="res://Assets/background1.jpg" type="Texture" id=4]
[ext_resource path="res://DebugPanel.gd" type="Script" id=5]

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 0.2625 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 128.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 23.77
initial_velocity_random = 1.0
angular_velocity = 0.1
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 3.55
linear_accel_random = 1.0
radial_accel = 17.75
radial_accel_random = 1.0
damping = 2.95
angle = 362.1
angle_random = 1.0
scale = 12.5
scale_random = 1.0
scale_curve = SubResource( 7 )
color = Color( 1, 1, 1, 0.384314 )
hue_variation = 0.03
hue_variation_random = 1.0

[sub_resource type="CapsuleShape2D" id=1]
radius = 266.0
height = 133.0

[sub_resource type="CircleShape2D" id=2]
radius = 1600.18

[node name="lvl1" type="Node"]
script = ExtResource( 3 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
follow_viewport_enable = true

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0.5 )
motion_mirroring = Vector2( 4594, 3017 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer2"]
margin_right = 4594.0
margin_bottom = 3017.0
texture = ExtResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="." groups=["ground"]]
scale = Vector2( 2, 2 )
collision_layer = 2
collision_mask = 2

[node name="Particles2D" type="Particles2D" parent="StaticBody2D"]
amount = 2000
lifetime = 112.86
visibility_rect = Rect2( -2000, -2000, 2000, 2000 )
local_coords = false
process_material = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
position = Vector2( -7, 0 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
rotation = 1.5708
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 282, -1582 )

[node name="Camera2D" type="Camera2D" parent="Player"]
rotating = true
current = true
__meta__ = {
"_edit_lock_": true
}

[node name="CenterOfGravity" type="Position2D" parent="."]

[node name="SpawnPoint" type="Position2D" parent="."]
position = Vector2( -98, -922 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
visible = false
space_override = 3
gravity_point = true
gravity_vec = Vector2( 0, 0 )
gravity = 100.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1, 4 )
shape = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DebugPanel" type="PanelContainer" parent="CanvasLayer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 7.0
margin_bottom = 7.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )

[node name="Panel" type="Panel" parent="CanvasLayer/DebugPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 357.0
margin_bottom = 56.0

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/DebugPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 357.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemList" type="ItemList" parent="CanvasLayer/DebugPanel/GridContainer"]
margin_right = 350.0
margin_bottom = 9.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 3
size_flags_vertical = 2
auto_height = true
max_columns = 2
fixed_column_width = 150

[node name="ConfigGravitySlider" type="HSlider" parent="CanvasLayer/DebugPanel/GridContainer"]
margin_top = 13.0
margin_right = 350.0
margin_bottom = 29.0
size_flags_horizontal = 3
min_value = 0.001
max_value = 500.0
value = 0.001

[node name="ConfigGravityCurveSlider" type="HSlider" parent="CanvasLayer/DebugPanel/GridContainer"]
margin_top = 33.0
margin_right = 350.0
margin_bottom = 49.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 1000.0
value = 1.0

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="value_changed" from="CanvasLayer/DebugPanel/GridContainer/ConfigGravitySlider" to="CanvasLayer/DebugPanel" method="_on_ConfigGravitySlider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/DebugPanel/GridContainer/ConfigGravityCurveSlider" to="CanvasLayer/DebugPanel" method="_on_ConfigGravityCurveSlider_value_changed"]
